--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,5 +9,6 @@ include ./gruvbox_dark.conf
 
 enable_audio_bell no
 tab_bar_style powerline
+map ctrl+tab next_tab
 term xterm-256color
 cursor_blink_interval 0
