--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,5 +10,6 @@ include ./gruvbox_dark.conf
 enable_audio_bell no
 tab_bar_style powerline
 map ctrl+tab next_tab
+map ctrl+shift+t new_tab_with_cwd
 term xterm-256color
 cursor_blink_interval 0
