--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,4 @@
+# vim:fileencoding=utf-8:ft=conf
 font_family      monospace Regular
 bold_font        monospace Bold
 italic_font      monospace Italic
@@ -13,3 +14,5 @@ map ctrl+tab next_tab
 map ctrl+shift+t new_tab_with_cwd
 term xterm-256color
 cursor_blink_interval 0
+# remember_window_size no
+background_opacity 0.95
