--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -5,14 +5,14 @@
  <alias>
   <family>sans-serif</family>
   <prefer>
-   <family>Liberation Sans</family>
+   <family>Noto Sans</family>
   </prefer>
  </alias>
-
+Noto 
  <alias>
   <family>serif</family>
   <prefer>
-   <family>Liberation Serif</family>
+   <family>Noto Serif</family>
   </prefer>
  </alias>
 
