--- a/.aliasrc
+++ b/.aliasrc
@@ -20,11 +20,12 @@
 # alias drive='cd ~/Python/google_api/ && ./main'
 #   alias folder='~/Python/google_api/2main'
 
-  alias voti='classeviva voti'
- alias medie='media'
-alias agenda='classeviva agenda'
-  alias oggi='classeviva oggi'
-alias domani='classeviva domani'
+alias medie='media'
+   alias voti='classeviva voti'
+   alias oggi='classeviva oggi'
+ alias domani='classeviva domani'
+ alias agenda='classeviva agenda'
+alias lezioni='classeviva lezioni'
 
 # coronavirus information
      alias corona='covid'
@@ -46,7 +47,7 @@ alias q='exit'
 alias e='exit'
 alias mem='df -h'
 alias disk='df -h /dev/sdb1'
-alias f='lfimg'
+alias f='lf'
 alias vim='nvim'
 alias vi='nvim'
 alias pm='pulsemixer'
