--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font monospace Bold Italic
 
 font_size 10.0
 
-include ./gruvbox_dark.conf
+include ./nord.conf
 
 enable_audio_bell no
 tab_bar_style powerline
@@ -16,4 +16,4 @@ term xterm-256color
 cursor_blink_interval 0
 # remember_window_size no
 background_opacity 0.95
-linux_display_server x11
+linux_display_server wayland
