--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,7 @@ set $term alacritty
 
 font pango:monospace 10
 
-gaps inner 14
+# gaps inner 14
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -124,6 +124,7 @@ bar {
         status_command i3status
 }
 
+exec --no-startup-id picom
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
