--- a/.config/i3/config
+++ b/.config/i3/config
@@ -39,11 +39,16 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
+# lock screen
+bindsym $mod+Escape exec --no-startup-id i3lock
+
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
+
+focus_follows_mouse no
 
 # move focused window
 bindsym $mod+Shift+h move left
@@ -70,7 +75,7 @@ bindsym $mod+space focus mode_toggle
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
+set $ws1 "1: Default"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
@@ -124,9 +129,13 @@ bar {
         status_command i3status
 }
 
-exec --no-startup-id picom
-exec --no-startup-id dex --autostart --environment i3
+# class specific settings
+for_window [class="Blueman-manager"] floating enable
+
+# autostart
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
+exec --no-startup-id picom
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id xset s 300
 exec --no-startup-id nm-applet
