--- a/.aliasrc
+++ b/.aliasrc
@@ -57,3 +57,6 @@ alias bubu='bubo && bubc'
 alias buf='brew upgrade --formula'
 alias bcubo='brew update && brew outdated --cask'
 alias bcubc='brew upgrade --cask && brew cleanup'
+
+# pacman
+alias autoremove='sudo pacman -Qdtq | sudo pacman -Rs -'
