--- a/.aliasrc
+++ b/.aliasrc
@@ -1,14 +1,6 @@
 # git
 alias gitu='git add . && git commit && git push'
 
-# classeviva
-alias voti='classeviva voti'
-alias medie='media'
-alias oggi='classeviva oggi'
-alias domani='classeviva domani'
-alias agenda='classeviva agenda'
-alias lezioni='classeviva lezioni'
-
 # coronavirus information
 alias corona='covid'
 alias coronavirus='covid'
@@ -31,6 +23,8 @@ alias gal='sxiv -tbf .'
 alias calc='qalc'
 alias ardcomp='arduino-cli compile -b arduino:avr:uno -v'
 alias ardupl='arduino-cli upload -p /dev/ttyACM0 -b arduino:avr:uno'
+alias vi='nvim'
+alias vim='nvim'
 
 # shell colors
 alias l='ls -l'
