--- a/.aliasrc
+++ b/.aliasrc
@@ -24,7 +24,7 @@ alias calc='qalc'
 alias ardcomp='arduino-cli compile -b arduino:avr:uno -v'
 alias ardupl='arduino-cli upload -p /dev/ttyACM0 -b arduino:avr:uno'
 alias vi=$EDITOR
-alias vim=$EDITOR$EDITOR
+alias vim=$EDITOR
 
 # shell colors
 alias l='ls -l'
