--- a/.aliasrc
+++ b/.aliasrc
@@ -2,7 +2,8 @@
 alias vi='$EDITOR'
 alias vim='$EDITOR'
 alias nvim='$EDITOR'
-alias nv='$EDITOR ~/.config/nvim/init.vim'
+alias nv='$EDITOR ~/.vimrc'
+#alias nv='$EDITOR ~/.config/nvim/init.vim'
 
 # git
 alias gitu='git add . && git commit && git push'
