kitty conf macos

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,9 +4,9 @@ bold_font        monospace Bold
 italic_font      monospace Italic
 bold_italic_font monospace Bold Italic
 
-font_size 10.0
+font_size 19.0
 
-include ./nord.conf
+include ./ayu.conf
 
 enable_audio_bell no
 tab_bar_style powerline
@@ -14,6 +14,7 @@ map ctrl+tab next_tab
 map ctrl+shift+t new_tab_with_cwd
 term xterm-256color
 cursor_blink_interval 0
-# remember_window_size no
+shell_integration no-cursor
+#remember_window_size no
 background_opacity 0.95
-linux_display_server wayland
+#linux_display_server wayland
