kitty colorscheme and font

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,12 @@
 # vim:fileencoding=utf-8:ft=conf
-font_family      monospace Regular
-bold_font        monospace Bold
-italic_font      monospace Italic
-bold_italic_font monospace Bold Italic
+font_family      Monaco Regular
+bold_font        Monaco Bold
+italic_font      Monaco Italic
+bold_italic_font Monaco Bold Italic
 
 font_size 19.0
 
-include ./ayu.conf
+include ./gruvbox_dark.conf
 
 enable_audio_bell no
 tab_bar_style powerline
@@ -16,5 +16,6 @@ term xterm-256color
 cursor_blink_interval 0
 shell_integration no-cursor
 #remember_window_size no
-background_opacity 0.95
-#linux_display_server wayland
+#background_opacity 0.95
+linux_display_server wayland
+macos_option_as_alt left
