--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_italic_font Monaco Bold Italic
 
 font_size 19.0
 
-include ./gruvbox_dark.conf
+include ./tango.conf
 
 enable_audio_bell no
 tab_bar_style powerline
@@ -16,6 +16,6 @@ term xterm-256color
 cursor_blink_interval 0
 shell_integration no-cursor
 #remember_window_size no
-#background_opacity 0.95
+background_opacity 0.90
 linux_display_server wayland
 macos_option_as_alt left
