--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,8 @@
 set $mod Mod4
 set $term urxvt
 
-font pango:monospace 8
+#font pango:monospace 8
+font pango:Hack Mono 8
 
 # audio
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -26,7 +27,8 @@ bindsym $mod+Return exec --no-startup-id $term
 bindsym $mod+Shift+q kill
 
 # start dmenu
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
 
 # lock screen
 bindsym $mod+Escape exec --no-startup-id i3lock
