kitty macos quit when last window closed

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,10 +16,11 @@ map cmd+t new_tab_with_cwd
 term xterm-256color
 cursor_blink_interval 0
 shell_integration no-cursor
-#remember_window_size no
-background_opacity 0.90
-linux_display_server wayland
+remember_window_size yes
+#background_opacity 0.90
+#linux_display_server wayland
 macos_option_as_alt left
+macos_quit_when_last_window_closed yes
 
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
