--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,10 +1,8 @@
-# i3 config file (v4)
-
 set $mod Mod4
-set $term urxvt
+set $term i3-sensible-terminal
 
-#font pango:monospace 8
-font pango:Hack Mono 8
+font pango:monospace 8
+#font pango:DejaVu Sans Mono 8
 
 # audio
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -17,21 +15,23 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
 
-# drag floating windows
+# drag windows
 floating_modifier $mod
+tiling_drag modifier titlebar
 
 # terminal
-bindsym $mod+Return exec --no-startup-id $term
+bindsym $mod+Return exec $term
 
-# kill window
+# kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu
+# start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
-
-# lock screen
-bindsym $mod+Escape exec --no-startup-id i3lock
+# A more modern dmenu replacement is rofi:
+# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+# There also is i3-dmenu-desktop which only displays applications shipping a
+# .desktop file. It is a wrapper around dmenu, so you need that installed.
+# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -39,20 +39,24 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-focus_follows_mouse no
-
 # move window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# fullscreen
+# resize window
+bindsym $mod+Ctrl+h resize shrink width 10px or 10 ppt
+bindsym $mod+Ctrl+j resize grow height 10px or 10 ppt
+bindsym $mod+Ctrl+k resize shrink height 10px or 10 ppt
+bindsym $mod+Ctrl+l resize grow width 10px or 10 ppt
+
+# enter fullscreen
 bindsym $mod+f fullscreen toggle
 
 # tiling direction
-bindsym $mod+x split h;exec --no-startup-id notify-send 'tile horizontally'
-bindsym $mod+y split v;exec --no-startup-id notify-send 'tile vertically'
+bindsym $mod+x split h
+bindsym $mod+y split v
 bindsym $mod+t split toggle
 
 # change layout
@@ -63,7 +67,7 @@ bindsym $mod+Ctrl+3 layout toggle split
 # toggle floating
 bindsym $mod+Shift+space floating toggle
 
-# focus tiling
+# focus floating
 bindsym $mod+space focus mode_toggle
 
 # workspace names
@@ -102,29 +106,22 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload configuration file
+# reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3
 bindsym $mod+Shift+r restart
 # exit i3
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window
-bindsym $mod+Ctrl+h resize shrink width 10 px or 10 ppt
-bindsym $mod+Ctrl+j resize grow height 10 px or 10 ppt
-bindsym $mod+Ctrl+k resize shrink height 10 px or 10 ppt
-bindsym $mod+Ctrl+l resize grow width 10 px or 10 ppt
-
 # start i3status
 bar {
-    status_command i3status
+	status_command i3status
 }
 
 # autostart
-#exec --no-startup-id nm-applet
-#exec --no-startup-id picom
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
+exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-exec --no-startup-id xset s 300
-exec --no-startup-id xset r rate 300 30
+exec --no-startup-id nm-applet
+exec --no-startup-id xset r rate 250 30
+#exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+#exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
