--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -19,7 +19,7 @@
  <alias>
   <family>monospace</family>
   <prefer>
-   <family>Noto Sans Mono</family>
+   <family>Hack</family>
   </prefer>
  </alias>
 
