--- a/.config/i3/config
+++ b/.config/i3/config
@@ -123,5 +123,6 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 exec --no-startup-id xset r rate 250 30
+exec --no-startup-id feh --bg-fill /usr/share/images/desktop-base/desktop-background
 #exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 #exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
