--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,6 +4,10 @@ set $term i3-sensible-terminal
 font pango:monospace 10
 #font pango:DejaVu Sans Mono 8
 
+# applications
+bindsym $mod+Return exec $term
+bindsym $mod+c exec --no-startup-id qalculate
+
 # audio
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -23,9 +27,6 @@ bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(d
 # drag windows
 floating_modifier $mod
 tiling_drag modifier titlebar
-
-# terminal
-bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
