use hack mono in kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # vim:fileencoding=utf-8:ft=conf
-font_family      Monaco Regular
-bold_font        Monaco Bold
-italic_font      Monaco Italic
-bold_italic_font Monaco Bold Italic
+font_family      Hack Regular
+bold_font        Hack Bold
+italic_font      Hack Italic
+bold_italic_font Hack Bold Italic
 
 font_size 16.0
 
