--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,8 +11,13 @@ include ./tango.conf
 enable_audio_bell no
 tab_bar_style powerline
 map ctrl+tab next_tab
+
 map ctrl+shift+t new_tab_with_cwd
 map cmd+t new_tab_with_cwd
+
+map ctrl+shift+enter new_window_with_cwd
+map cmd+enter new_window_with_cwd
+
 term xterm-256color
 cursor_blink_interval 0
 shell_integration no-cursor
