--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,7 +5,7 @@ font pango:monospace 10
 #font pango:DejaVu Sans Mono 8
 
 # default layout
-workspace_layout tabbed
+# workspace_layout tabbed
 
 # applications
 bindsym $mod+Return exec $term
@@ -33,6 +33,7 @@ for_window [class="feh"] floating enable
 for_window [class="Xfce4-appfinder"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Blueman-manager"] floating enable
+for_window [class="Nm-connection-editor"] floating enable
 
 # drag windows
 floating_modifier $mod
