--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf
+
+# General
 font_family      Hack Regular
 bold_font        Hack Bold
 italic_font      Hack Italic
@@ -7,26 +9,22 @@ bold_italic_font Hack Bold Italic
 font_size 16.0
 
 include ./tango.conf
-
-enable_audio_bell no
 tab_bar_style powerline
-map ctrl+tab next_tab
-
-map ctrl+shift+t new_tab_with_cwd
-map cmd+t new_tab_with_cwd
-
-map ctrl+shift+enter new_window_with_cwd
-map cmd+enter new_window_with_cwd
-
 term xterm-256color
 cursor_blink_interval 0
 shell_integration no-cursor
 remember_window_size yes
-#background_opacity 0.90
-#linux_display_server wayland
+enable_audio_bell no
+touch_scroll_multiplier 16.0
+
+# MacOS specific
 macos_option_as_alt left
 macos_quit_when_last_window_closed yes
 
+# Mappings (macOS)
+map cmd+t new_tab_with_cwd
+map cmd+enter new_window_with_cwd
+map cmd+g scroll_home
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -36,3 +34,18 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+
+# Mappings (linux)
+map ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+enter new_window_with_cwd
+map ctrl+shift+g scroll_home
+map ctrl+tab next_tab
+map alt+1 goto_tab 1
+map alt+2 goto_tab 2
+map alt+3 goto_tab 3
+map alt+4 goto_tab 4
+map alt+5 goto_tab 5
+map alt+6 goto_tab 6
+map alt+7 goto_tab 7
+map alt+8 goto_tab 8
+map alt+9 goto_tab 9
