--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,6 +25,7 @@ macos_quit_when_last_window_closed yes
 map cmd+t new_tab_with_cwd
 map cmd+enter new_window_with_cwd
 map cmd+g scroll_home
+map cmd+shift+g scroll_end
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -38,7 +39,8 @@ map cmd+9 goto_tab 9
 # Mappings (linux)
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+enter new_window_with_cwd
-map ctrl+shift+g scroll_home
+map ctrl+g scroll_home
+map ctrl+shift+g scroll_end
 map ctrl+tab next_tab
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
